# fsbuilder

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  app.py  generator.py  pyproject.toml  start.command
.github/workflows/: ci.yml  deploy.yml
.playwright-cli/: page-2026-04-09T15-25-30-459Z.yml  page-2026-04-09T15-33-42-235Z.yml  page-2026-04-09T15-35-54-626Z.yml  page-2026-04-09T15-36-46-015Z.yml  page-2026-04-09T15-38-43-668Z.yml  page-2026-04-09T15-39-53-946Z.yml
deploy/: fs-builder.nginx  fs-builder.service  remove.sh  setup.sh  update.sh
docs/: DEMO_GUIDE.md  PROJECT_STRUCTURE.md  deploy.md  参考文献APA修正建议.md  毕业设计论文初稿.md  论文排版片段.tex
docs/demo/: 毕业设计作品说明书封面及正文格式.docx
docs/latex_paper/: main.tex
docs/latex_paper/figures/: coverage_chart_tikz.tex  generate_coverage_chart.py  generate_coverage_python_chart.py  pipeline_flow.mmd  system_architecture_tikz.tex
docs/latex_paper/sections/: 00_abstract_cn.tex  01_abstract_en.tex  02_intro.tex  03_related_and_requirements.tex  04_system_design.tex  05_implementation.tex  06_evaluation.tex  07_conclusion.tex  08_references.tex
examples/: drawing_die.txt
featurestudio/: README.md  metadata.json
featurestudio/src/: App.tsx  index.css  types.ts
fs_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: analyze.txt  generate.txt
scripts/: build_demo_docs.py  start_webui.sh
src/fs_builder/: __init__.py  __main__.py  analyzer.py  cli.py  errors.py  generator.py  merger.py  models.py  paths.py  plan_io.py  prompting.py  settings.py
src/fs_builder/analysis/: __init__.py  errors.py  fallbacks.py  parsing.py  provider.py  service.py
src/fs_builder/application/: __init__.py  use_cases.py
src/fs_builder/generation/: __init__.py  errors.py  helpers.py  merge.py  models.py  renderers.py  service.py
src/fs_builder/io/: __init__.py  artifacts.py  plans.py  resources.py
src/fs_builder/prompts/: __init__.py  analyze.txt  generate_legacy.txt
src/fs_builder/references/: __init__.py  featurescript_guide.md
src/fs_builder/webui/: __init__.py  api.py  server.py
src/fs_builder/webui/static/: app.js  index.html  styles.css
static/: index.html
tests/: conftest.py  test_analyzer.py  test_application.py  test_cli.py  test_generator.py  test_io.py  test_merger.py  test_models.py  test_paths.py  test_settings.py  test_webui.py
tmp/docs/: 毕业设计（论文）模板副本.docx  论文模板.docx  说明书模板.docx
tmp/mplcache/: fontlist-v390.json
