[project]
name = "fs-builder"
version = "0.1.0"
description = "Natural language → Onshape FeatureScript generator"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fs-builder = "main:main"
fs-builder-web = "app:run"

[tool.setuptools]
py-modules = ["analyzer", "app", "generator", "main", "merger"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
