[project]
name = "fs-builder"
version = "0.2.0"
description = "CLI-first demo for natural language to Onshape FeatureScript"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.23.0",
    "openai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
fs-builder = "fs_builder.cli:main"

[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fs_builder.prompts" = ["*.txt"]
"fs_builder.references" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
